--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,14 @@ dependencies {
     //Map and Location
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
-    def nav_version = "2.3.0-alpha01"
+    //search Location
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    def nav_version = '2.3.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     //Fresco
     implementation 'com.facebook.fresco:fresco:2.1.0'
 
@@ -64,30 +66,30 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
 
     // ViewModel and LiveData
-    def lifecycle_version = "2.1.0"
+    def lifecycle_version = '2.2.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     //rxjava adapter
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //gson - to convert the model class to JSON String
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.6.2"
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     def rxjava2_version = '2.0.1'
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxjava2_version"
 
-    implementation 'com.squareup.okhttp3:okhttp:4.0.0-alpha02'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0-RC1'
 
     //dagger
-    implementation 'com.google.dagger:dagger-android:2.20'
-    implementation 'com.google.dagger:dagger-android-support:2.20'
+    implementation 'com.google.dagger:dagger-android:2.31'
+    implementation 'com.google.dagger:dagger-android-support:2.31'
 
     //circular image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -96,9 +98,9 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
 
     // if you use the support libraries
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.20'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.31'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.31'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
